data validation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "<function unittest.case.TestCase.assertRaisesRegex(self, expected_exception, expected_regex, *args, **kwargs)>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,45 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-13 22:02:11,028: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-05-13 22:02:11,040: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-05-13 22:02:11,044: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-05-13 22:02:11,045: INFO: common: created directory at: artifacts]\n",
-      "[2025-05-13 22:02:11,047: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-05-13 22:02:12,698: INFO: 3447005916: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 21304\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"ce40ff1150530c66622c3342013ea581664252c0a0d01130db6444f7b07d0604\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 27E9:8AF06:7E200:ECDCC:682350E3\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Tue, 13 May 2025 14:02:12 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-nrt-rjtf7700049-NRT\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1747144932.030230,VS0,VE470\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 15b534c08a844454faa465c2faa228540212bf8a\n",
-      "Expires: Tue, 13 May 2025 14:07:12 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n"
+      "[2025-05-14 00:13:39,984: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-05-14 00:13:39,987: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-05-14 00:13:40,004: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-05-14 00:13:40,006: INFO: common: created directory at: artifacts]\n",
+      "[2025-05-14 00:13:40,008: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-05-14 00:13:40,010: INFO: 3447005916: File already exists of size: ~ 21 KB]\n"
      ]
     }
    ],
