model trainer added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -238,12 +238,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-14 00:13:39,984: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-05-14 00:13:39,987: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-05-14 00:13:40,004: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-05-14 00:13:40,006: INFO: common: created directory at: artifacts]\n",
-      "[2025-05-14 00:13:40,008: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-05-14 00:13:40,010: INFO: 3447005916: File already exists of size: ~ 21 KB]\n"
+      "[2025-05-14 12:06:19,885: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:19,898: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:19,914: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:19,918: INFO: common: created directory at: artifacts]\n",
+      "[2025-05-14 12:06:19,923: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2025-05-14 12:06:21,323: INFO: 3447005916: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 21304\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"ce40ff1150530c66622c3342013ea581664252c0a0d01130db6444f7b07d0604\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: ACB9:3D898A:12EBE1:2B305D:6824053A\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Wed, 14 May 2025 04:06:21 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-nrt-rjtf7700027-NRT\n",
+      "X-Cache: HIT\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1747195581.335427,VS0,VE275\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 4f9d44c69dce36bf684730334139f842987a3e4c\n",
+      "Expires: Wed, 14 May 2025 04:11:21 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
