--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -69,11 +69,9 @@
     "\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class DataValidationConfig:\n",
+    "class DataTransformationConfig:\n",
     "    root_dir: Path\n",
-    "    STATUS_FILE: str\n",
-    "    unzip_data_dir: Path\n",
-    "    all_schema: dict"
+    "    data_path: Path"
    ]
   },
   {
@@ -104,23 +102,19 @@
     "        self.schema = read_yaml(schema_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
-    "        config = self.config.data_validation\n",
-    "        schema = self.schema.COLUMNS\n",
+    "        \n",
+    "       \n",
+    "    def get_data_transformation_config(self) -> DataTransformationConfig:\n",
+    "        config = self.config.data_transformation\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        data_validation_config = DataValidationConfig(\n",
+    "        data_transformation_config = DataTransformationConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            STATUS_FILE=config.STATUS_FILE,\n",
-    "            unzip_data_dir = config.unzip_data_dir,\n",
-    "            all_schema=schema,\n",
+    "            data_path=config.data_path,\n",
     "        )\n",
     "\n",
-    "        return data_validation_config"
+    "        return data_transformation_config"
    ]
   },
   {
@@ -131,6 +125,7 @@
    "source": [
     "import os\n",
     "from mlProject import logger\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd"
    ]
   },
@@ -140,35 +135,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataValiadtion:\n",
-    "    def __init__(self, config: DataValidationConfig):\n",
+    "class DataTransformation:\n",
+    "    def __init__(self, config: DataTransformationConfig):\n",
     "        self.config = config\n",
     "\n",
+    "\n",
     "    \n",
-    "    def validate_all_columns(self)-> bool:\n",
-    "        try:\n",
-    "            validation_status = None\n",
+    "    ## Note: You can add different data transformation techniques such as Scaler, PCA and all\n",
+    "    #You can perform all kinds of EDA in ML cycle here before passing this data to the model\n",
     "\n",
-    "            data = pd.read_csv(self.config.unzip_data_dir)\n",
-    "            all_cols = list(data.columns)\n",
+    "    # I am only adding train_test_spliting cz this data is already cleaned up\n",
     "\n",
-    "            all_schema = self.config.all_schema.keys()\n",
     "\n",
-    "            \n",
-    "            for col in all_cols:\n",
-    "                if col not in all_schema:\n",
-    "                    validation_status = False\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
-    "                else:\n",
-    "                    validation_status = True\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "    def train_test_spliting(self):\n",
+    "        data = pd.read_csv(self.config.data_path)\n",
     "\n",
-    "            return validation_status\n",
-    "        \n",
-    "        except Exception as e:\n",
-    "            raise e"
+    "        # Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "        train, test = train_test_split(data)\n",
+    "\n",
+    "        train.to_csv(os.path.join(self.config.root_dir, \"train.csv\"),index = False)\n",
+    "        test.to_csv(os.path.join(self.config.root_dir, \"test.csv\"),index = False)\n",
+    "\n",
+    "        logger.info(\"Splited data into training and test sets\")\n",
+    "        logger.info(train.shape)\n",
+    "        logger.info(test.shape)\n",
+    "\n",
+    "        print(train.shape)\n",
+    "        print(test.shape)\n",
+    "        "
    ]
   },
   {
@@ -180,20 +174,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-05-14 12:06:37,378: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-05-14 12:06:37,382: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-05-14 12:06:37,390: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-05-14 12:06:37,393: INFO: common: created directory at: artifacts]\n",
-      "[2025-05-14 12:06:37,410: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2025-05-14 12:06:48,308: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:48,314: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:48,324: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-05-14 12:06:48,327: INFO: common: created directory at: artifacts]\n",
+      "[2025-05-14 12:06:48,329: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2025-05-14 12:06:48,378: INFO: 1637581648: Splited data into training and test sets]\n",
+      "[2025-05-14 12:06:48,379: INFO: 1637581648: (857, 13)]\n",
+      "[2025-05-14 12:06:48,380: INFO: 1637581648: (286, 13)]\n",
+      "(857, 13)\n",
+      "(286, 13)\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    data_validation_config = config.get_data_validation_config()\n",
-    "    data_validation = DataValiadtion(config=data_validation_config)\n",
-    "    data_validation.validate_all_columns()\n",
+    "    data_transformation_config = config.get_data_transformation_config()\n",
+    "    data_transformation = DataTransformation(config=data_transformation_config)\n",
+    "    data_transformation.train_test_spliting()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
@@ -207,8 +206,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
